fix(CatalogTile): Fix to not allow the description text to overflow the tile (#804)
Description text could overflow the tile in Firefox. This is a better CSS constraint.

--- a/packages/patternfly-3/patternfly-react-extensions/sass/patternfly-react-extensions/_catalog-tile.scss
+++ b/packages/patternfly-3/patternfly-react-extensions/sass/patternfly-react-extensions/_catalog-tile.scss
@@ -63,6 +63,7 @@
   display: flex;
   flex-direction: column;
   margin-top: 15px;
+  min-height: 0;
 
   .catalog-tile-pf-title {
     font-size: ($font-size-base + 1);
@@ -75,6 +76,7 @@
   }
 
   .catalog-tile-pf-description {
+    flex: 1;
     margin-top: 15px;
     overflow-y: hidden;
   }
